--- a/dart-cart-client/src/Components/ShopProduct.css
+++ b/dart-cart-client/src/Components/ShopProduct.css
@@ -66,9 +66,18 @@
     display: block;
     box-shadow: inset 0 0 2000px rgba(255, 255, 255, .5);
     filter: blur(10px);
+    z-index: 3;
 }
 
-.SellerLogo {
-    height: 15%;
-    width: 35%;
+.SellerWindow .SellerLogo {
+    filter: blur(0px);
+    width: 50%;
+    z-index: 2;
+}
+
+.SellerPocket {
+    margin-top: 4%;
+    border-style: double;
+    border-width: .5rem;
+    border-color: #5f5f5f;
 }
